--- a/mini-project/coorporate-equipment-allocation/equipment-allocation/conf/application.conf
+++ b/mini-project/coorporate-equipment-allocation/equipment-allocation/conf/application.conf
@@ -1,1 +1,49 @@
 # https://www.playframework.com/documentation/latest/Configuration
+# Database configuration
+play.modules.enabled+="MyModule"
+
+slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
+slick.dbs.default.db.driver = "com.mysql.cj.jdbc.Driver"
+slick.dbs.default.db.url = "jdbc:mysql://scaladb.mysql.database.azure.com:3306/neeraj_milan"
+slick.dbs.default.db.user = "mysqladmin"
+slick.dbs.default.db.password = "Password@12345"
+
+
+
+
+
+# play evolutions for db migrationsx
+play.evolutions.enabled = false
+#play.evolutions.autoApply=truez
+# play.evolutions.db.default.autoApply=true
+#play.evolutions.db.default.autoApply = true  # Apply evolutions automatically
+#play.evolutions.db.default.path = "conf/evolutions/default"
+#play.evolutions.db.default.autoApplyDown = false
+#Logging for play Evolutions
+# Enable logging for Evolutions (Database Migrations)
+# Set the logging level for evolutions
+#play.evolutions.db.defaußlt.logLevel = "INFO"  # Can be set to DEBUG or TRACE for more details
+# Example logging configuration
+logger.play.evolutions = "INFO"  # Log evolutions at INFO level
+
+logger.slick = "DEBUG"  # Log slick at DEBUG level
+
+
+# Kafka Configuration
+
+kafka {
+  bootstrapServers = "localhost:9092"  # Replace with your Kafka broker(s)
+  clientId = "play-kafka-producer"
+  acks = "all"  # Ensures strong consistency
+  retries = 3
+}
+
+
+
+# Enabling Startup Tasks by adding Module
+
+
+
+
+
+
