updated root structure

--- a/mini-project/coorporate-equipment-allocation/equipment-allocation/conf/application.conf
+++ b/mini-project/coorporate-equipment-allocation/equipment-allocation/conf/application.conf
@@ -29,6 +29,33 @@ logger.play.evolutions = "INFO"  # Log evolutions at INFO level
 logger.slick = "DEBUG"  # Log slick at DEBUG level
 
 
+# Enable CORS Filter
+play.filters.enabled += "play.filters.cors.CORSFilter"
+
+# CORS settings (adjust as necessary)
+play.filters.cors {
+  # Allow requests from any origin (you can customize this to specific domains in production)
+  allowedOrigins = ["*"]
+
+  # Allow specific HTTP methods (GET, POST, PUT, DELETE, OPTIONS, etc.)
+  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+
+  # Allow specific headers in the request
+  allowedHeaders = ["Content-Type", "Authorization", "X-Requested-With"]
+
+  # Allow credentials (cookies, HTTP authentication, etc.)
+  allowCredentials = true
+
+  # Expose headers in the response
+  exposedHeaders = ["Content-Type", "Authorization"]
+
+  # Pre-flight cache duration in seconds
+  preflightMaxAge = 3600
+}
+
+
+
+
 # Kafka Configuration
 
 kafka {
@@ -37,6 +64,8 @@ kafka {
   acks = "all"  # Ensures strong consistency
   retries = 3
 }
+
+
 
 
 
