Added docker configs

--- a/mini-project/coorporate-equipment-allocation/docker-compose.yml
+++ b/mini-project/coorporate-equipment-allocation/docker-compose.yml
@@ -63,19 +63,36 @@ services:
       - kafka3
       - zookeeper
   message-app:
-    image: equipment-management:latest
+    image: message-processing-service:latest
     ports:
       - "8082:8082"
     environment:
       KAFKA_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9093,kafka3:9094
     networks:
       - kafka-network
-    container_name: akka-app
+    container_name: message-app
     depends_on:
       - kafka1
       - kafka2
       - kafka3
       - zookeeper
+
+  notification-app:
+    image: notification-service:latest
+    ports:
+      - "8083:8083"
+    environment:
+      KAFKA_BOOTSTRAP_SERVERS: kafka1:9092,kafka2:9093,kafka3:9094
+    networks:
+      - kafka-network
+    container_name: notification-app
+    depends_on:
+      - kafka1
+      - kafka2
+      - kafka3
+      - zookeeper
+
+
 networks:
   kafka-network:
     driver: bridge
