changed cors config

--- a/mini-project/coorporate-equipment-allocation/equipment-allocation/conf/application.conf
+++ b/mini-project/coorporate-equipment-allocation/equipment-allocation/conf/application.conf
@@ -34,23 +34,14 @@ play.filters.enabled += "play.filters.cors.CORSFilter"
 
 # CORS settings (adjust as necessary)
 play.filters.cors {
-  # Allow requests from any origin (you can customize this to specific domains in production)
-  allowedOrigins = ["*"]
+  pathPrefixes = ["/"]  # Only enable CORS for paths starting with /api
+  allowedOrigins = ["*"]   # Allow all origins
+  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "PATCH"]
+  allowedHttpHeaders = ["Accept", "Origin", "Content-type", "X-Auth-Token"]
+}
 
-  # Allow specific HTTP methods (GET, POST, PUT, DELETE, OPTIONS, etc.)
-  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
-
-  # Allow specific headers in the request
-  allowedHeaders = ["Content-Type", "Authorization", "X-Requested-With"]
-
-  # Allow credentials (cookies, HTTP authentication, etc.)
-  allowCredentials = true
-
-  # Expose headers in the response
-  exposedHeaders = ["Content-Type", "Authorization"]
-
-  # Pre-flight cache duration in seconds
-  preflightMaxAge = 3600
+play.filters.hosts {
+  allowed = ["."]
 }
 
 
