--- a/mini-project/visitor-management/visitor-management-service/conf/application.conf
+++ b/mini-project/visitor-management/visitor-management-service/conf/application.conf
@@ -11,6 +11,18 @@ slick.dbs.default {
 
     }
 }
+play.http.secret.key="ACht0wuC/Ktuf5EYqSbT3/q:W;tzu5hUBap:V`g8PkA9KCwo?gIMgLl21DWrCX>a"
+
+play.filters.cors {
+  pathPrefixes = ["/"]  # Only enable CORS for paths starting with /api
+  allowedOrigins = ["*"]   # Allow all origins
+  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "PATCH"]
+  allowedHttpHeaders = ["Accept", "Origin", "Content-type", "X-Auth-Token"]
+}
+
+play.filters.hosts {
+  allowed = ["."]
+}
 
 # Evolution configuration
 # play.evolutions.enabled=true
