--- a/mini-project/visitor-management/visitor-management-service/conf/application.conf
+++ b/mini-project/visitor-management/visitor-management-service/conf/application.conf
@@ -13,6 +13,10 @@ slick.dbs.default {
 }
 play.http.secret.key="ACht0wuC/Ktuf5EYqSbT3/q:W;tzu5hUBap:V`g8PkA9KCwo?gIMgLl21DWrCX>a"
 
+# Enable CORS Filter
+play.filters.enabled += "play.filters.cors.CORSFilter"
+
+# CORS settings (adjust as necessary)
 play.filters.cors {
   pathPrefixes = ["/"]  # Only enable CORS for paths starting with /api
   allowedOrigins = ["*"]   # Allow all origins
@@ -23,7 +27,6 @@ play.filters.cors {
 play.filters.hosts {
   allowed = ["."]
 }
-
 # Evolution configuration
 # play.evolutions.enabled=true
 # play.evolutions.autoApply=true
